--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="cyan">#00FFFF</color>
     <color name = "orange">#FFA500</color>
     <color name = "green">#228B22</color>
+    <color name = "skyBlue">#66e0ff</color>
 </resources>
