--- a/app/src/main/res/layout/bluetooth_main.xml
+++ b/app/src/main/res/layout/bluetooth_main.xml
@@ -1,48 +1,88 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Chat">
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".Chat">
 
     <EditText
         android:id="@+id/message"
-        android:hint="Your message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/send"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
         android:layout_toStartOf="@+id/send"
-        android:imeOptions="actionSend"/>
+        android:layout_toLeftOf="@+id/send"
+        android:hint="Your message"
+        android:imeOptions="actionSend"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/send"
-        android:text="Send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/message"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:text="Send"
+        android:visibility="invisible" />
 
     <ScrollView
         android:id="@+id/scrollView"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical"
         android:layout_above="@+id/message"
-        android:layout_alignRight="@+id/send"
         android:layout_alignEnd="@+id/send"
-        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/send"
+        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="132dp"
+        android:layout_marginEnd="112dp"
+        android:layout_marginRight="112dp"
+        android:layout_marginBottom="-16dp"
+        android:scrollbars="vertical"
+        android:visibility="invisible">
 
         <TextView
             android:id="@+id/text"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="bottom"/>
+            android:gravity="bottom" />
     </ScrollView>
+
+    <TextView
+        android:id="@+id/volume_text"
+        android:layout_width="212dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="178dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="383dp"
+        android:text="Volume" />
+
+    <TextView
+        android:id="@+id/temp_Text"
+        android:layout_width="212dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="33dp"
+        android:layout_marginEnd="197dp"
+        android:layout_marginBottom="400dp"
+        android:text="Temperature" />
 
 </RelativeLayout>
