--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -19,6 +19,7 @@
         android:ems="10"
         android:hint="email"
         android:inputType="textPersonName"
+        android:textColorHighlight="@color/skyBlue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
