--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,11 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#66e0ff</color>
     <color name="indicator_unselected">#4D000000</color>
     <color name="cyan">#00FFFF</color>
     <color name = "orange">#FFA500</color>
     <color name = "green">#228B22</color>
     <color name = "skyBlue">#66e0ff</color>
+    <color name = "grey">#787878</color>
 </resources>
