--- a/app/src/main/res/layout/bluetooth_main.xml
+++ b/app/src/main/res/layout/bluetooth_main.xml
@@ -99,7 +99,7 @@
         android:layout_marginEnd="124dp"
         android:gravity="center"
         android:text="15.6 oz"
-        android:textColor="@android:color/white"
+        android:textColor="@color/common_google_signin_btn_text_light_focused"
         android:textSize="3mm"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -120,6 +120,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="10 cups"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/add_cup_button"
         app:layout_constraintEnd_toStartOf="@+id/textView5"
         app:layout_constraintStart_toEndOf="@+id/cups_water"
@@ -167,27 +168,6 @@
         app:layout_constraintTop_toBottomOf="@+id/t_water_text" />
 
     <TextView
-        android:id="@+id/temp_Text"
-        android:layout_width="73dp"
-        android:layout_height="35dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:gravity="center"
-        android:text="75 deg F"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/imageView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.922"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/w_nickname_text" />
-
-    <TextView
         android:id="@+id/w_nickname_text"
         android:layout_width="392dp"
         android:layout_height="56dp"
@@ -220,6 +200,7 @@
         android:layout_marginStart="148dp"
         android:layout_marginTop="8dp"
         android:text="5 cups /"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/add_cup_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/volume_text"
@@ -255,6 +236,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="You have had"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/cups_water"
         app:layout_constraintHorizontal_bias="1.0"
@@ -267,10 +249,11 @@
         android:layout_width="55dp"
         android:layout_height="24dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="44dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
         android:text="today."
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/volume_text"
@@ -287,5 +270,47 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/w_nickname_text"
         app:srcCompat="@mipmap/w5" />
+
+    <TextView
+        android:id="@+id/temp_Text"
+        android:layout_width="73dp"
+        android:layout_height="35dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:gravity="center"
+        android:text="75 deg F"
+        android:textColor="@color/common_google_signin_btn_text_light_focused"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/w_nickname_text"
+        app:layout_constraintVertical_bias="0.04000002" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="sans-serif"
+        android:text="Your Water Temperature:"
+        android:textStyle="bold"
+        android:typeface="sans"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/w_nickname_text"
+        app:layout_constraintVertical_bias="0.01999998" />
 
 </android.support.constraint.ConstraintLayout>
